--- a/templates/admin/admin_edit_listing.html
+++ b/templates/admin/admin_edit_listing.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+      input:checked ~ .dot {
+      transform: translateX(100%);
+      background-color: #48bb78;
+    }
+    </style>
     <title>{{ page_title }}</title>
   </head>
   <body>
